fix(Atoms/Button): Correctly overwrite text size on small variant

--- a/packages/core/src/components/atoms/button/button.component.scss
+++ b/packages/core/src/components/atoms/button/button.component.scss
@@ -135,12 +135,10 @@ p-button {
 
     // sizes
     &.size-small {
-        @apply h-8;
+        @apply h-8 text-sm;
 
         button,
         a {
-            @apply text-sm;
-
             > p-icon:first-child {
                 @apply text-base;
             }
